# 100DaysOfRust

day6/: README.md
day6/prime-judger/front/: package-lock.json  package.json
day6/prime-judger/front/src/: App.js
day6/prime-judger/lib/: Cargo.toml
day6/prime-judger/lib/src/: lib.rs
day7/: README.md  package.json
day7/dynamodb-crud-demo/: Cargo.toml  serverless.yml
day7/dynamodb-crud-demo/.serverless/: cloudformation-template-update-stack.json  serverless-state.json
day7/dynamodb-crud-demo/src/: main.rs
